<resources>

    <string name="app_name">Animal Shelter Donation</string>
    <string name="for_a_good_cause">For A Good Cause</string>
    <string name="donate">Donate</string>
    <string name="how_much_would_you_like_to_donate">How Much Would You Like To Donate ?</string>
    <string name="rm_10">RM 10</string>
    <string name="rm_50">RM 50</string>
    <string name="rm_100">RM 100</string>
    <string name="donate_now">DONATE NOW</string>
    <string name="name_on_card">Name On Card :</string>
    <string name="card_number">Card Number :</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="security_code">Security Code :</string>
    <string name="submit">SUBMIT</string>
    <string name="todo">TODO</string>
    <string name="security">SECURITY</string>
    <string name="thank_you">THANK YOU</string>
    <string name="we_have_received_your_donation">We Have Received Your Donation</string>
    <string name="click_here_to_go_to_account_overview">Click Here To Go To Account Overview</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="card_number1">Card Number</string>
    <string name="card_expiry_month_mm">Card Expiry Month (MM)</string>
    <string name="card_expiry_year_yy">Card Expiry Year (YY)</string>
    <string name="rm_10_00">RM 10.00</string>
    <string name="rm_50_00">RM 50.00</string>
    <string name="rm_100_00">RM 100.00</string>
    <string name="rm_200_00">RM 200.00</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="donate1">Donate</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="height_18_cm">Height : 18 cm</string>
    <string name="weight_20_kg">Weight : 20 kg</string>
    <string name="age_9_months_old">Age : 9 Months Old</string>
    <string name="gender_male">Gender : Male</string>
    <string name="name_hiiro">Name : Hiiro</string>
    <string name="congratulations_you_have_successfully_adopted_this_cute_puppy">Congratulations, You Have Successfully Adopted This Cute Puppy</string>
    <string name="congratulations_you_have_successfully_adopted_this_cute_kitty">Congratulations, You Have Successfully Adopted This Cute Kitty</string>
    <string name="todo7">TODO</string>
    <string name="congratulations_you_have_successfully_adopted_this_cute_bunny">Congratulations, You Have Successfully Adopted This Cute Bunny</string>
    <string name="name_thumper">Name : Thumper</string>
    <string name="gender_male1">Gender : Male</string>
    <string name="age_6_months_old">Age : 6 Months Old</string>
    <string name="weight_12_kg">Weight : 12 kg</string>
    <string name="height_12_5_cm">Height : 12.5 cm</string>
    <string name="todo8">TODO</string>
    <string name="congratulations_you_have_successfully_adopted_two_bunnies">Congratulations, You Have Successfully Adopted Two Bunnies</string>
    <string name="names_romeo_and_juliet">Names : Romeo And Juliet</string>
    <string name="gender_male_and_female">Gender : Male And Female</string>
    <string name="age_7_months_old_each">Age : 7 Months Old Each</string>
    <string name="weight_12_kg_each">Weight : 12 kg Each</string>
    <string name="height_12_5_cm_each">Height : 12.5 cm Each</string>
    <string name="todo9">TODO</string>
    <string name="congratulations_you_have_successfully_adopted_this_cute_bunny1">Congratulations, You Have Successfully Adopted This Cute Bunny</string>
    <string name="name_buffy">Name : Buffy</string>
    <string name="gender_male2">Gender : Male</string>
    <string name="age_5_months_old">Age : 5 Months Old</string>
    <string name="weight_11_5_kg">Weight : 11.5 kg</string>
    <string name="height_10_cm">Height : 10 cm</string>
    <string name="todo10">TODO</string>
    <string name="puppy">Puppy</string>
    <string name="kitten">Kitten</string>
    <string name="bunny">Bunny</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="adopt_me">Adopt Me</string>
    <string name="adopt_me1">Adopt Me</string>
    <string name="adopt_me2">Adopt Me</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="adopt_me3">Adopt Me</string>
    <string name="adopt_me4">Adopt Me</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="adopt_me5">Adopt Me</string>
    <string name="todo20">TODO</string>
    <string name="adopt_me6">Adopt Me</string>
    <string name="adopt_me7">Adopt Me</string>
    <string name="adopt_me8">Adopt Me</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="name_max">Name : Max</string>
    <string name="age_8_months_old">Age : 8 Months Old</string>
    <string name="gender_male3">Gender : Male</string>
    <string name="weight_13_kg">Weight : 13 kg</string>
    <string name="height_12_cm">Height : 12 cm</string>
    <string name="todo24">TODO</string>
    <string name="name_josh">Name : Josh</string>
    <string name="age_8_months_old1">Age : 8 Months Old</string>
    <string name="gender_male4">Gender : Male</string>
    <string name="weight_13_kg1">Weight : 13 kg</string>
    <string name="height_12_cm1">Height : 12 cm</string>
    <string name="todo25">TODO</string>
    <string name="name_carol">Name : Carol</string>
    <string name="age_7_months_old">Age : 7 Months Old</string>
    <string name="gender_female">Gender : Female</string>
    <string name="weight_13_5_kg">Weight : 13.5 kg</string>
    <string name="height_12_8_cm">Height : 12.8 cm</string>
    <string name="todo26">TODO</string>
    <string name="names_coco_and_chanel">Names : Coco And Chanel</string>
    <string name="age_5_months_old_each">Age : 5 Months Old Each</string>
    <string name="gender_both_female">Gender : Both Female</string>
    <string name="weight_11_5_kg1">Weight : 11.5 kg</string>
    <string name="height_13_5_cm">Height : 13.5 cm</string>
    <string name="todo27">TODO</string>
    <string name="weight_11_5_kg2">Weight : 11.5 kg</string>
    <string name="name_hersey">Name : Hersey</string>
    <string name="age_5_months_old1">Age : 5 Months Old</string>
    <string name="gender_female1">Gender : Female</string>
    <string name="height_15_5_cm">Height : 15.5 cm</string>
    <string name="todo28">TODO</string>
    <string name="world_s_1_donation_app">World\'s #1 Donation App</string>
    <string name="overview">Overview</string>
    <string name="we_are_a_company_that_form">We Are A Company That Form</string>
    <string name="partnership_with_animal_shelter_to">Partnership With Animal Shelter To</string>
    <string name="collect_donations_and_provide_adoptions">Collect Donations And Provide Adoptions</string>
    <string name="to_help_out_this_shelter">To Help Out This Shelter</string>
    <string name="thay_an_gie_founder">Thay An Gie, Founder</string>
    <string name="todo29">TODO</string>
    <string name="some_angels_choose_fur_instead_of_wings">Some Angels Choose Fur Instead Of Wings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="your_message">Your Message</string>
    <string name="submit1">SUBMIT</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="thank_you1">Thank You</string>
    <string name="for_your_feedback">For Your Feedback!</string>
    <string name="we_will_be_in_touch_with_you_shortly">We Will Be In Touch With You Shortly</string>
    <string name="your_message1">Your Message</string>
    <string name="submit2">SUBMIT</string>
    <string name="gender1">Gender :</string>
    <string name="male1">Male</string>
    <string name="female1">Female</string>
    <string name="name1">Name</string>
    <string name="password">Password</string>
    <string name="Username">Username</string>
    <string name="email1">Email Address</string>
    <string name="phone">Contact Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="male2">Male</string>
    <string name="female2">Female</string>
    <string name="age">Age</string>
    <string name="not_a_user_yet_register_now">Not A User Yet? Register Now!</string>
    <string name="already_a_user_login_here">Already A User? Login Here</string>
    <string name="donate2">Donate</string>
    <string name="account_information">Account Information</string>
    <string name="about">About</string>
    <string name="adopt">Adopt</string>
    <string name="feedback">Feedback</string>
    <string name="todo30">TODO</string>
    <string name="welcome_to_animal_shelter_donation">WELCOME TO ANIMAL SHELTER DONATION</string>
    <string name="we_help_because_we_care">WE HELP BECAUSE WE CARE</string>
    <string name="proceed_to_app">PROCEED TO APP</string>
    <string name="login1">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo31">TODO</string>
    <string name="your_message2">Your Message</string>
    <string name="submit3">SUBMIT</string>
    <string name="gender2">Gender :</string>
    <string name="male3">Male</string>
    <string name="female3">Female</string>
    <string name="first_namee">First Name</string>
    <string name="last_namee">Last Name</string>
    <string name="card_numberr">Card Number</string>
    <string name="card_expiry_month_mmm">Card Expiry Month(MM)</string>
    <string name="card_expiry_year_yyy">Card Expiry Year(YY)</string>
    <string name="security_codee">Security Code</string>
    <string name="securityy">SECURITY</string>
    <string name="submitt">SUBMIT</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="age1">Age</string>
    <string name="contact">Contact</string>
    <string name="email2">Email</string>
    <string name="password1">Password</string>
    <string name="name2">Name</string>
    <string name="logout">Logout</string>
    <string name="todo32">TODO</string>
    <string name="rm_1000_00">RM 1000.00</string>

</resources>

